# store

./: .gitignore  pyproject.toml  setup.py
store/: database.py  parser.py
tests/: test_basic.py  test_cond_total.py  test_database.py  test_meta.py  test_meta_cerberus.py  test_meta_jsonschema.py  test_multi.py  test_schema.py  test_search.py  test_search_conds.py  test_update.py  test_update_check.py
